tor (0.2.4.23-1~deb6u1) squeeze-lts; urgency=low

  * Build for squeeze.

 -- Peter Palfrader <weasel@debian.org>  Thu, 31 Jul 2014 15:02:20 +0200

tor (0.2.4.23-1~deb7u1) wheezy-security; urgency=high

  * New upstream version, built for wheezy:
    - Clients will no longer use CREATE_FAST cells for the first hop of their
      circuit.  This approach can improve security on connections where Tor's
      circuit handshake is stronger than the available TLS connection security
      levels.
    - Prepare for lowering the number of used entry guards by honoring the
      NumDirectoryGuards consensus parameter.
    - Fix a bug in the bounds-checking in the 32-bit curve25519-donna
      implementation.
    - Warn and drop the circuit if we receive an inbound 'relay early' cell.

 -- Peter Palfrader <weasel@debian.org>  Wed, 30 Jul 2014 23:01:22 +0200

tor (0.2.4.22-1~deb7u1) wheezy; urgency=medium

  * Build for stable (re: #751977).
  * Revert upstream changes to the default torrc to match what 0.2.3.25-1
    from stable has (two minor changes in comments).

 -- Peter Palfrader <weasel@debian.org>  Mon, 23 Jun 2014 15:16:39 +0200

tor (0.2.4.22-1) unstable; urgency=medium

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Sat, 17 May 2014 09:59:02 +0200

tor (0.2.4.21-1) unstable; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Sat, 01 Mar 2014 19:35:30 +0100

tor (0.2.4.20-1) unstable; urgency=low

  * New upstream version.
    - Avoid a crash bug when starting with a corrupted microdescriptor cache
      file. Fixes bug 10406; bugfix on 0.2.2.6-alpha (closes: #732105).
  * init script: make /var/log/tor if it does not exist anymore
    (closes: #732572).

 -- Peter Palfrader <weasel@debian.org>  Wed, 25 Dec 2013 12:07:50 +0100

tor (0.2.4.19-1) unstable; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Thu, 12 Dec 2013 14:31:32 +0100

tor (0.2.4.18-rc-1) experimental; urgency=low
